feat: + XIVItemEquipSlot, XIVItemBaseParams, XIVItemFoodParams

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,6 +9,9 @@
     "dev": "vite",
     "build": "tsc"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
