--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tomestone/ui",
+  "name": "@ffxiv-kit/ui",
   "version": "0.1.0",
   "type": "module",
   "scripts": {
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tomestone/api": "workspace:^",
+    "@ffxiv-kit/api": "workspace:^",
     "fexios": "^1.5.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.9"
